compiler-core/lexing/tests/snapshots/layout__do_let.snap
---
source: compiler-core/lexing/tests/layout.rs
expression: "print_tokens(&lexed, &tokens)"
---
module Test where{

test = do{
  let{ foo = bar};
  foo;};

test = do{
  let{ foo = bar};
  in baz;
  foo;};

test = do{
  let{ foo = bar}
    in baz;
  foo;}}
<eof>
