compiler-core/lexing/tests/snapshots/layout__do_nested_terminal_recovery.snap
---
source: compiler-core/lexing/tests/layout.rs
expression: "print_tokens(&lexed, &tokens)"
---
test = do{
  outer;
  do{
    inner;}}
    <eof>
