compiler-core/lexing/tests/snapshots/layout__do_operator.snap
---
source: compiler-core/lexing/tests/layout.rs
expression: "print_tokens(&lexed, &tokens)"
---
module Test where{

test = do{
  foo;
  foo do{
    bar;};}
  <|> bar}

<eof>
