compiler-core/lexing/tests/snapshots/layout__do_qualified_terminal_recovery.snap
---
source: compiler-core/lexing/tests/layout.rs
expression: "print_tokens(&lexed, &tokens)"
---
test = Effect.do{
  action;}
  <eof>
