compiler-core/lexing/tests/snapshots/layout__do_terminal_recovery.snap
---
source: compiler-core/lexing/tests/layout.rs
assertion_line: 43
expression: "print_tokens(&lexed, &tokens)"
---
test = do{
  action;}
  <eof>
