compiler-core/lexing/tests/snapshots/layout__do_terminal_recovery_overindented.snap
---
source: compiler-core/lexing/tests/layout.rs
expression: "print_tokens(&lexed, &tokens)"
---
test = do{
  action}
    <eof>
