compiler-core/lexing/tests/snapshots/layout__if_then_else_do.snap
---
source: compiler-core/lexing/tests/layout.rs
expression: "print_tokens(&lexed, &tokens)"
---
module Test where{

foo = do{
  if true then
    false
  else if false then do{
    that;}
    else do{
     what;};
  that;}}
<eof>
